--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       - '${WEB_API_PORT:-8080}:8080'
     networks:
       - bot_network
+      - remnawave-network
     healthcheck:
       test:
         [
@@ -104,3 +105,5 @@ networks:
           gateway: 172.20.0.1
     driver_opts:
       com.docker.network.driver.mtu: 1350
+  remnawave-network:
+    external: true
