fix: убрать bot_network, все контейнеры в remnawave-network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - bot_network
+      - remnawave-network
     healthcheck:
       test:
         [
@@ -31,7 +31,7 @@ services:
     volumes:
       - redis_data:/data
     networks:
-      - bot_network
+      - remnawave-network
     healthcheck:
       test: ['CMD', 'redis-cli', 'ping']
       interval: 30s
@@ -77,7 +77,6 @@ services:
     ports:
       - '${WEB_API_PORT:-8080}:8080'
     networks:
-      - bot_network
       - remnawave-network
     healthcheck:
       test:
@@ -97,13 +96,5 @@ volumes:
     driver: local
 
 networks:
-  bot_network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
-          gateway: 172.20.0.1
-    driver_opts:
-      com.docker.network.driver.mtu: 1350
   remnawave-network:
     external: true
